--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.2.5</version>
     <relativePath/>
-    <!--  lookup parent from repository  -->
-    </parent>
+</parent>
 
     <groupId>com.store-project</groupId>
     <artifactId>store-project</artifactId>
@@ -43,16 +42,14 @@
     <dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
-    <optional>true</optional>
+    <scope>provided</scope>
     </dependency>
-
-    <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakartaee-platform-10</artifactId>
-            <version>10.0.0</version>
-            <type>pom</type>
-            <scope>compile</scope>
-        </dependency>
+<dependency>
+    <groupId>jakarta.platform</groupId>
+    <artifactId>jakarta.jakartaee-api</artifactId>
+    <version>10.0.0</version>
+    <scope>provided</scope>
+</dependency>
 
 </dependencies>
 <build>
@@ -65,6 +62,7 @@
     <path>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
+    <version>1.18.28</version>
     </path>
 </annotationProcessorPaths>
 </configuration>
